--- a/report/report.tex
+++ b/report/report.tex
@@ -134,9 +134,15 @@
 \maketitle
 
 \section{Introduction}
+% Noget om hvad projektet går ud på, måske hovedresultater
+
+\section{Background}
 % Noget om generel struktur på raste
 % Noget om par monad
+
 \section{Experiments}
+
+% Introducer afsnittet, beskriv overordnet hvilke steder vi har identificeret kunne være mulige at parallelisere. måske en tegning ...
 
 \subsection{Benchmarks}
 
@@ -229,11 +235,20 @@ show similar results for decomposing a single, \textit{unrealisically} large lin
   \label{fig:single-line-thread-sparks}
 \end{figure}
 
-\subsubsection{Parallelizing Multiple Decomposition Calls}
+\subsection{Sorting Edge Samples}
 
-\subsection{Sorting}
+\subsection{Combining Edge Samples}
 
-\subsection{Applying Edge Samples}
+\subsection{Multiple Decomposition Calls}
+
+\subsection{Multiple FillOrder Calls}
+
+\section{Discussion}
+
+% diskuter resultater
+% hvad er scope for parallelisering i det hele taget i rasterific, hvordan kan man udnytte det
+
+\section{Further Work}
 
 \section{Conclusion}
 
