Appendix starts on a new page

--- a/report/report.tex
+++ b/report/report.tex
@@ -383,6 +383,7 @@ Perhaps bigger refactoring needed for maximum parallel gains, e.g. flattening th
 
 \section{Conclusion}
 =======
+\clearpage
 \appendix
 
 \section{Code}
