benchmarks: some text -- nearly an actual section now

--- a/report/report.tex
+++ b/report/report.tex
@@ -199,11 +199,13 @@ Approach to find possibilities for parallelization: reading the salient parts of
 Some kind of revised graph from the one in Section \ref{background}, with the specific functions we have worked on annotated + clearly describing which granularity they operate at. v importante
 
 \subsection{Benchmarks}
-
+We will make references to some benchmarks further down. This is a short recap of which benchmarks exist in Rasterific and which ones we have added.
 \begin{itemize}
-\item \textbf{Snowflake:} Draws a series of transparent snowflakes on a background. See Figure \ref{fig:snowflakes}.
+\item \textbf{Snowflake:} Draws a series of transparent snowflakes on a background. See Figure \ref{fig:snowflakes}. Was added to the Rasterific project
+   shortly before we started our project.
 \item ??
-\item \textbf{Lines:} Draws a large number of randomly colored lines on a background. See Figure \ref{fig:lines}
+\item \textbf{Lines:} Draws a large number of randomly colored lines on a background. See Figure \ref{fig:lines-benchmark}.
+  We have added this to benchmark line primitive decomposition.
 \end{itemize}
 \begin{figure}[h!]
   \centering
